# port-spacelift-integration

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  profiler.py  pyproject.toml
.cursor/rules/: core-development.mdc  integration-development.mdc  python-fast-api.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
deployment/: README.md
integrations/spacelift/: .env.example  Makefile  README.md  client.py  config.yml  initialize.py  integration.py  log_config.py  main.py  pyproject.toml  requirements.txt  resourceKind.py  utils.py
integrations/spacelift/.port/: port-app-config.yaml  spec.yaml  spec.yml
integrations/spacelift/.port/blueprints/: deployment.json  deployments.json  policies.json  policy.json  space.json  spaces.json  stack.json  stacks.json  user.json  users.json
integrations/spacelift/.port/resources/: blueprints.json  port-app-config.yaml  port-app-config.yml
integrations/spacelift/mappings/: deployments.json  policies.json  spaces.json  stacks.json  users.json
integrations/spacelift/spacelift/: client.py  queries.py
integrations/spacelift/tests/: test_client.py
port_ocean/: __init__.py  bootstrap.py  debug_cli.py  middlewares.py  ocean.py  run.py  sonar-project.properties  version.py
scripts/: bump-all.sh  bump-single-integration.sh  clean-smoke-test.py  clean-smoke-test.sh  run-compare-diff-pef.sh  run-local-perf-test.sh  run-local-smoke-test.sh  run-metric-test.sh  run-smoke-test.sh  smoke-test-base.sh  upgrade-integrations.sh
(+1099 files in other folders)
