[tool.poetry]
name = "spacelift"
version = "0.1.0"
description = "Port ocean integration for spacelift"
authors = ["maruche <nwokocha.maruche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tenacity = "^9.1.2"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
