[tool.poetry]
name = "spacelift"
version = "0.1.0"
description = "Port ocean integration for spacelift"
authors = ["maruche <nwokocha.maruche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tenacity = "^9.1.2"
loguru = "^0.7.3"
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
port-ocean = {extras = ["cli"], version = "^0.25.0"}
aiolimiter = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
